[package]
name = "ratatui-logline-table"
description = "Logline Table Widget for ratatui"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/ratatui-logline-table"
authors = ["EdJoPaTo <ratatui-logline-table-rust@edjopato.de>"]
edition = "2024"
rust-version = "1.86"
keywords = ["tui", "terminal", "log", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
min_ident_chars = "warn"
unused_trait_names = "warn"

[dependencies]
ratatui-core = { version = "0.1.0", default-features = false }
ratatui-widgets = "0.3.0"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
ratatui = "0.30"
rstest = "0.26"
